# dora

./: Cargo.toml
examples/mcp-host/: README.md  config-deepseek.toml  config-gemini.toml  config.toml  dataflow-deepseek.yml  dataflow-e.yml  dataflow-gemini.yml  dataflow.yml  empty_object.json  mcp_host.toml  mcp_server.toml  openai_api_client.py  test_client.py
examples/mcp-host/nodes/: local.py  telepathy.py
examples/mcp-server/: README.md  config.toml  counter.json  counter.py  dataflow.yml  weather.py
examples/mcp-server/nodes/: counter.py  weather.py
node-hub/dora-ai-agent/: Cargo.toml  config.toml
node-hub/dora-ai-agent/src/: client.rs  config.rs  error.rs  main.rs  models.rs  routing.rs  session.rs  tool.rs  utils.rs
node-hub/dora-gradio/: demo.yml
node-hub/dora-mcp-host/: Cargo.toml  config.toml
node-hub/dora-mcp-host/src/: client.rs  config.rs  error.rs  main.rs  models.rs  routing.rs  session.rs  tool.rs  utils.rs
node-hub/dora-mcp-server/: Cargo.toml  README.md  config-example.json
node-hub/dora-mcp-server/src/: config.rs  error.rs  main.rs  mcp_server.rs  routing.rs
node-hub/openai-proxy-server/src/: main.rs
