[package]
name = "dora-ai-agent"
version.workspace = true
edition.workspace = true
documentation.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
dora-node-api = { workspace = true, features = ["tracing"] }
eyre = "0.6.8"
chrono = "0.4.31"
tracing = "0.1.27"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
url = "2.2.2"
indexmap = { version = "2.6.0", features = ["serde"] }
thiserror = "2.0.12"
uuid = { version = "1.10", features = ["v4"] }
mime_guess = "2.0.4"
futures = "0.3.31"
tokio-stream = "0.1.11"
salvo ={ version = "0.80.0", features = ["full"] }
rust-embed = { workspace = true }